<resources>
    <string name="app_name">Hallyu Style</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="bag">Cart</string>
    <string name="login">Login</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating_and_reviews">Rating and reviews</string>
    <string name="checkout">Checkout</string>
    <string name="shipping_addresses">Shipping Addresses</string>
    <string name="edit_shipping_address">Edit Shipping Address</string>
    <string name="adding_shipping_address">Adding Shipping Address</string>
    <string name="payment_methods">Payment methods</string>
    <string name="categories">Categories</string>
    <string name="all_product">All product</string>
    <string name="order_details">Order Details</string>
    <string name="my_orders">My Orders</string>
    <string name="my_profile">My Profile</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_up_with_social_account">Or sign up with social account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="account_exists">The email is already registered please login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="view_all_items">View all items</string>
    <string name="choose_category">Choose category</string>
    <string name="image_product">Image product</string>
    <string name="title_time_out">Continue scanning the QR</string>
    <string name="message_time_out">Time allowed. Do you want to continue scanning the product QR code</string>
    <string name="title_incorrect">QR Incorrect</string>
    <string name="message_incorrect">Please try again</string>
    <string name="close">Close</string>
    <string name="message_continue">Continue</string>
    <string name="ok">OK</string>
    <string name="newest">Newest</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="try_again">Try Again</string>
    <string name="image">image</string>
    <string name="add_new_card">Add new card</string>
    <string name="name_on_card">Name on card</string>
    <string name="card_number">Card Number</string>
    <string name="expire_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="use_as_default_payment_method">Use as default payment method</string>
    <string name="add_card">Add card</string>
    <string name="what_is_you_rate">What is you rate?</string>
    <string name="please_choose_star">Please Choose Star</string>
    <string name="please_share_your_opinion_about_the_product">Please share your opinion \nabout the product</string>
    <string name="please_type_review">Please Type Review</string>
    <string name="your_review">Your Review</string>
    <string name="send_review">SEND REVIEW</string>
    <string name="password_change">Password Change</string>
    <string name="old_password">Old Password</string>
    <string name="forgot_password_2">Forgot Password?</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="save_password">SAVE PASSWORD</string>
    <string name="price">Price</string>
    <string name="value_range">Value range</string>
    <string name="reset">Reset</string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_promo_code">Enter your promo code</string>
    <string name="wrong_code_promo">Wrong code promo</string>
    <string name="your_promo_codes">Your Promo Codes</string>
    <string name="choose_your_country">Choose your country</string>
    <string name="select_size">Select size</string>
    <string name="select_color">Select color</string>
    <string name="add_to_favorites">ADD TO FAVORITES</string>
    <string name="sort_by">Sort by</string>
    <string name="popular">Popular</string>
    <string name="customer_review">Customer review</string>
    <string name="price_lowest_to_high">Price: lowest to high</string>
    <string name="price_highest_to_low">Price: highest to low</string>
    <string name="filters">Filters</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state_province_region">State/Province/Region</string>
    <string name="zip_code_postal_code">Zip/Postal code (optional)</string>
    <string name="country">Country</string>
    <string name="save_address">Save address</string>
    <string name="button">button</string>
    <string name="allow_camera_access_to_scan_products">Allow camera access to scan products</string>
    <string name="you_can_use_your_camera_to_scan_qr_codes_to_quickly_search_products">You can use your camera to scan QR codes to quickly search products.</string>
    <string name="you_previously_denied_noda_access_to_your_camera_you_can_change_this_by_allowing_camera_access_in_your_phone_settings">You previously denied Noda access to your camera. You can change this by allowing camera access in your phone settings.</string>
    <string name="not_now">Not now</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="check_out">Check out</string>
    <string name="total_amount">Total amount:</string>
    <string name="shipping_address">Shipping address</string>
    <string name="change">Change</string>
    <string name="please_add_shipping_address">Please add shipping address</string>
    <string name="payment">Payment</string>
    <string name="please_add_credit_card">Please add credit card</string>
    <string name="delivery_method">Delivery method</string>
    <string name="order">Order:</string>
    <string name="_0">0 AED</string>
    <string name="delivery">Delivery:</string>
    <string name="cod">Cash On Delivery</string>
    <string name="summary">Summary:</string>
    <string name="submit_order">SUBMIT ORDER</string>
    <string name="tracking_number">Tracking number:</string>
    <string name="order_information">Order information</string>
    <string name="shipping_address_2">Shipping Address:</string>
    <string name="payment_method">Payment method:</string>
    <string name="delivery_method_2">Delivery method:</string>
    <string name="discount">Discount:</string>
    <string name="reorder">Reorder</string>
    <string name="your_payment_cards">Your payment cards</string>
    <string name="shipping_info">Shipping info</string>
    <string name="support">Support</string>
    <string name="you_can_also_like_this">You can also like this</string>
    <string name="sort">Sort</string>
    <string name="promocodes">Promocodes</string>
    <string name="you_have_special_promocodes">You have special promocodes</string>
    <string name="my_reviews">My reviews</string>
    <string name="settings">Settings</string>
    <string name="notifications_password">Notifications, password</string>
    <string name="policy">Policy</string>
    <string name="policy_term_of_service"><![CDATA[Policy & Term of service]]></string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_content">"Are you sure you want to Delete?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello">Hello</string>
    <string name="sign_in_to_shop_more_easily_and_enjoy_many_promotions">Sign in to shop more easily\nand enjoy many promotions</string>
    <string name="scan_qr_code_nto_find_products_faster">Scan QR Code\nto find products faster</string>
    <string name="with_photo">With photo</string>
    <string name="write_a_review">Write a review</string>
    <string name="history">HISTORY</string>
    <string name="search">Search</string>
    <string name="categories_2">CATEGORIES</string>
    <string name="view_all">View All</string>
    <string name="change_your_avatar">Change your avatar</string>
    <string name="person_information">Person Information</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password_default">**********</string>
    <string name="notifications">Notifications</string>
    <string name="sales">Sales</string>
    <string name="new_arrivals">New arrivals</string>
    <string name="delivery_status_changes">Delivery status changes</string>
    <string name="success">Success!</string>
    <string name="your_order_will_be_delivered_soon_thank_you_for_choosing_our_app">Your order will be delivered soon.\nThank you for choosing our app!</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="get_start">Get Start</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="please_login_to_use_this_function">Please login to use this function</string>
    <string name="edit">Edit</string>
    <string name="use_as_the_shipping_address">Use as the shipping address</string>
    <string name="color_2">Color:</string>
    <string name="size_2">Size:</string>
    <string name="add_your_photos">Add your photos</string>
    <string name="view_all_2">View all</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="quantity">Quantity:</string>
    <string name="details">Details</string>
    <string name="sorry_this_item_is_currently_sold_out">Sorry, this item is currently sold out</string>
    <string name="units">Units:</string>
    <string name="apply">Apply</string>
    <string name="helpful">Helpful</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisi nulla purus neque quisque dictum dui. Accumsan fames adipiscing.</string>
    <string name="default_delivery">2-3 days</string>
    <string name="notification">Notification</string>
    <string name="order_success">Order Success</string>
    <string name="update_password_success">Update password success</string>
    <string name="review_list">Review List</string>
    <string name="no_reviews">No Customer Reviews yet</string>
    <string name="promo_list">Promo List</string>
    <string name="my_bag">My Cart</string>
    <string name="add_to_favorites_2">Add to favorites</string>
    <string name="delete_from_the_list">Delete from the list</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="warning_select_size">Please select size</string>
    <string name="warning_select_color">Please select color</string>
    <string name="title_share">Choose one</string>
    <string name="save_success">Saved success</string>
    <string name="support_user">Support User</string>
    <string name="default_admin">XwXp3xFFZ8SVZQEv6YeE9eXwyJI2</string>
    <string name="currency">AED</string>
    <string name="shop_by_brands">Shop by Brands</string>
    <string name="featured">Featured</string>
    <string name="best">Best Selling</string>
    <string name="in_stock">available in stock</string>
    <string name="items">%d items</string>
    <string name="added_to_cart_successfully">Added to Cart Successfully</string>
    <string name="failed">Failed, Something went wrong</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="updated_cart_item">Updated Cart Item</string>
</resources>