<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_round_corner2"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/image"
        android:src="@drawable/rectangle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/sort_by"
        android:textSize="@dimen/size_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnPopular"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:padding="@dimen/margin_default"
        android:text="@string/popular"
        android:textSize="@dimen/size_text" />

    <TextView
        android:id="@+id/btnNewest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_default"
        android:text="@string/newest"
        android:textSize="@dimen/size_text" />

    <TextView
        android:id="@+id/btnCustomerReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_default"
        android:text="@string/customer_review"
        android:textSize="@dimen/size_text" />

    <TextView
        android:id="@+id/btnLowestToHigh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_default"
        android:text="@string/price_lowest_to_high"
        android:textSize="@dimen/size_text" />

    <TextView
        android:id="@+id/btnHighestToLow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_default"
        android:text="@string/price_highest_to_low"
        android:textSize="@dimen/size_text" />
</LinearLayout>
