<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_round_corner2"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/image"
        android:src="@drawable/rectangle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/price"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:padding="@dimen/margin_default"
        android:text="@string/value_range"
        android:textSize="@dimen/size_text" />


    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rangeSlider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:labelBehavior="visible"
        android:layout_marginTop="20dp"
        android:stepSize="1.0"
        app:values="@array/initial_slider_values" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReset"
            style="@style/buttonTheme"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button"
            android:layout_weight="1"
            android:fontFamily="@font/metropolis_bold"
            android:text="@string/reset"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btnConfirm"
            style="@style/buttonTheme"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/metropolis_bold"
            android:text="@string/confirm"
            android:textAllCaps="true" />
    </LinearLayout>


</LinearLayout>
