<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_round_corner2"
    android:backgroundTint="@color/grey2"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/image"
        android:src="@drawable/rectangle" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_default"
        android:fontFamily="@font/metropolis_bold"
        android:text="@string/password_change"
        android:textSize="@dimen/size_title"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayout_OldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/edit_txt_custom"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextOldPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:background="@drawable/edit_txt_custom"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:fontFamily="@font/metropolis_thin"
        android:text="@string/forgot_password_2"
        android:textSize="@dimen/size_sub_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayout_NewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/edit_txt_custom"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:background="@drawable/edit_txt_custom"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayout_RepeatNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/edit_txt_custom"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRepeatNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:background="@drawable/edit_txt_custom"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSavePassword"
        style="@style/buttonTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/metropolis_bold"
        android:text="@string/save_password" />

</LinearLayout>