<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_round_corner2"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/image"
        android:src="@drawable/rectangle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/metropolis_bold"
        android:text="@string/add_new_card"
        android:textSize="@dimen/size_title"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutNameCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/edit_txt_custom"
        android:elevation="@dimen/elevation_default"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNameCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:background="@drawable/edit_txt_custom"
            android:hint="@string/name_on_card"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/edit_txt_custom"
        android:elevation="@dimen/elevation_default"
        android:paddingEnd="12dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@null"
        app:endIconMode="custom"
        app:endIconTint="@null"
        app:endIconTintMode="multiply">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCardNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:background="@drawable/edit_txt_custom"
            android:hint="@string/card_number"
            android:inputType="numberPassword"
            android:maxLength="19"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutExpireDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/edit_txt_custom"
        android:elevation="@dimen/elevation_default"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextExpireDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:background="@drawable/edit_txt_custom"
            android:hint="@string/expire_date"
            android:inputType="numberPassword"
            android:maxLength="5"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutCVV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/edit_txt_custom"
        android:elevation="@dimen/elevation_default"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCVV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:background="@drawable/edit_txt_custom"
            android:hint="@string/cvv"
            android:inputType="numberPassword"
            android:maxLength="3"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkboxDefault"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_checkbox"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="29dp"
        android:backgroundTint="@color/black"
        android:buttonTint="@color/black"
        android:text="@string/use_as_default_payment_method"
        android:textColor="@color/black2"
        android:textSize="@dimen/size_sub_title" />

    <Button
        android:id="@+id/btnAddCard"
        style="@style/buttonTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/metropolis_bold"
        android:text="@string/add_card"
        android:textAllCaps="true" />

</LinearLayout>