<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_round_corner2"
    android:backgroundTint="@color/grey2"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="@dimen/margin_default"
        android:contentDescription="@string/image"
        android:src="@drawable/rectangle" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/what_is_you_rate"
                android:textSize="@dimen/size_title"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="17dp"
                android:isIndicator="false"
                android:numStars="5"
                android:progressTint="@color/yellow"
                android:rating="0"
                android:secondaryProgressTint="@color/transparent"
                android:stepSize="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtAlertStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/please_choose_star"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/size_title"
                android:visibility="gone" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="18dp"
                android:text="@string/please_share_your_opinion_about_the_product"
                android:textAlignment="center"
                android:textSize="@dimen/size_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAlertDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/please_type_review"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/size_title"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edittextDescription"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:autofillHints="true"
                android:background="@drawable/edit_txt_custom"
                android:gravity="top"
                android:hint="@string/your_review"
                android:inputType="textMultiLine"
                android:paddingStart="20dp"
                android:paddingTop="14dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:textColor="@color/black"
                android:textSize="@dimen/size_sub_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewImageReview"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="24dp"
                android:paddingTop="6dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/btnSendReview"
        style="@style/buttonTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="10dp"
        android:text="@string/send_review" />

</LinearLayout>
